fixed some layout issues..updated research file

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -161,6 +161,7 @@ table {
   padding:5px;
   width: 150px;
   height:100px;
+  margin: 0 0 0 10;
 }
 
 .grid-item p {
